--- a/Final-Project/style.css
+++ b/Final-Project/style.css
@@ -3,12 +3,25 @@
 
 body {
     /* min-width: fit-content; */
+    width: 100%;
     font-family: 'Gafata', sans-serif;
 }
 
 .text-shadow {
     text-shadow: 1px 1px 2px black;
 }
+
+/* #region link hover */
+a {
+    color: #428681;
+}
+
+a:hover,
+a:focus {
+    color: #5afaed;
+}
+
+/* #endregion link hover */
 
 /* #region canvas */
 canvas {
@@ -253,35 +266,6 @@ canvas {
 
 .hidden {
     visibility: hidden;
-}
-
-/* .slide-from-bottom {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    overflow: hidden;
-    background-color: #000; color: #FFF;
-    transition: all 1s;
-  } */
-
-/* .animated.slide-from-bottom {
-    top: 100%;
-  height: 0;
-} */
-.animated.slide-from-bottom {
-    /* position: relative; */
-    animation: showBottom 1s;
-}
-
-@keyframes showBottom {
-    from {
-        bottom: -50px;
-    }
-
-    to {
-        bottom: 0;
-    }
 }
 
 /* #endregion slide */
