--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 p {
     margin: 0;
     padding: 0;
+    margin-top: -1px;
     line-height: 20px;
 }
 
@@ -10,6 +11,9 @@ p {
 
 .branch {
     margin-left: 25px;
+}
+.shiftBack {
+    margin-left:-1.3px;
 }
 
 .sticky-header {
